@@ -8,6 +8,9 @@
     <string>3082010A028201010092CE4E1EAEB7533F4A9DA2335F08977DC65DC35D530D528BE809BF4DCBDA27FABD36B75FFBCC5BC7FEF34FE3363CAC049553B52A3116E2AF8A048DDC539304E3F801BA6DBF4D082846673950842D8DC1DE7255F82CA1A3A741B39EC62F7016C9009540F27A40C10137DB0B692516201E11356B1C2B385BCA97DF8B0645D72710DE7531C736FEF0B3BA570F0A235B8DE8E79EBF9F4484864BE9AFE2A74F7C0DA8F54403D04F47CE0669130CD55AF4C3414454071B384F129347675CEF7D7125C5434AA3E89A0A848D105B1031CF079ADF584E2AB9F01B86A8204FAAEC02042FF31B227334137E094D73F06456E7D46E2BEA20FB5B14FF136CCA839839415C749D0203010001</string>
     <string>3082010A0282010100EE9353A3A9DFE1B4D856468580B6DEC589F7C8E8461E35AE4CB337BEA3FF85244F4F3398CF7DEECB1BF0218A5C2F8521F1D905D8D5139D04D9CC8333EA5ECDB6F77BCBD6F7763303CDAA518DC8FAFF9ABA3A6252DA1CDF7E86561DE6FAD3599FDA05A2FEBAF28E46571D078E3D26D45E7E7E613C047A5BFAE3668B358F6D193BC23A7FBE64445F7F412B20483BB15AE3F73A34963D0718C9D061A1A85FC7E417B629BCB374F5E20FE19715B9F27389F05825C9D83EE1171E8FC2897F98F92487042F2B8BFC01F5C3676BBAFDE23CFC737523EF9478885431A2538BC01F8A19F7E34C2DC5859980842713D8DDB96BEEFEF1C86AF1E8C459270C6E2CFEAC6750D70203010001</string>
   </PublicKeys>
+  <SearchPaths>
+    <string>{reg:SOFTWARE\Mozilla\Mozilla Firefox\{reg:SOFTWARE\Mozilla\Mozilla Firefox:CurrentVersion}\Main:PathToExe}</string>
+  </SearchPaths>
 </ProfileAssoc>
 <ProfileAssoc Executable="plugin-container.exe">
   <Profiles>
@@ -17,5 +20,8 @@
     <string>3082010A028201010092CE4E1EAEB7533F4A9DA2335F08977DC65DC35D530D528BE809BF4DCBDA27FABD36B75FFBCC5BC7FEF34FE3363CAC049553B52A3116E2AF8A048DDC539304E3F801BA6DBF4D082846673950842D8DC1DE7255F82CA1A3A741B39EC62F7016C9009540F27A40C10137DB0B692516201E11356B1C2B385BCA97DF8B0645D72710DE7531C736FEF0B3BA570F0A235B8DE8E79EBF9F4484864BE9AFE2A74F7C0DA8F54403D04F47CE0669130CD55AF4C3414454071B384F129347675CEF7D7125C5434AA3E89A0A848D105B1031CF079ADF584E2AB9F01B86A8204FAAEC02042FF31B227334137E094D73F06456E7D46E2BEA20FB5B14FF136CCA839839415C749D0203010001</string>
     <string>3082010A0282010100EE9353A3A9DFE1B4D856468580B6DEC589F7C8E8461E35AE4CB337BEA3FF85244F4F3398CF7DEECB1BF0218A5C2F8521F1D905D8D5139D04D9CC8333EA5ECDB6F77BCBD6F7763303CDAA518DC8FAFF9ABA3A6252DA1CDF7E86561DE6FAD3599FDA05A2FEBAF28E46571D078E3D26D45E7E7E613C047A5BFAE3668B358F6D193BC23A7FBE64445F7F412B20483BB15AE3F73A34963D0718C9D061A1A85FC7E417B629BCB374F5E20FE19715B9F27389F05825C9D83EE1171E8FC2897F98F92487042F2B8BFC01F5C3676BBAFDE23CFC737523EF9478885431A2538BC01F8A19F7E34C2DC5859980842713D8DDB96BEEFEF1C86AF1E8C459270C6E2CFEAC6750D70203010001</string>
   </PublicKeys>
+  <SearchPaths>
+    <string>{reg:SOFTWARE\Mozilla\Mozilla Firefox\{reg:SOFTWARE\Mozilla\Mozilla Firefox:CurrentVersion}\Main:Install Directory}\plugin-container.exe</string>
+  </SearchPaths>
 </ProfileAssoc>
 </ArrayOfProfileAssoc>
