@@ -134,6 +134,9 @@
     <Compile Include="netstat\TcpTable.cs" />
     <Compile Include="netstat\UdpRow.cs" />
     <Compile Include="netstat\UdpTable.cs" />
+    <Compile Include="Parser\ParserRegistryVariable.cs" />
+    <Compile Include="Parser\ParserVariable.cs" />
+    <Compile Include="Parser\RecursiveParser.cs" />
     <Compile Include="PasswordForm.cs">
       <SubType>Form</SubType>
     </Compile>
